--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -58,5 +58,5 @@
     "@types/mapbox-gl": "^2.7.18",
     "typescript": "^5.3.2"
   },
-  "proxy": "http://backend:8000"
+  "proxy": "http://localhost:8000"
 }
