feat: Add open data collectors for e-Stat, weather, GTFS, and events
- Implement EStatCollector for government statistics
- Add WeatherCollector using Open-Meteo API
- Create GTFSCollector for public transport data
- Add EventCollector for tourism and event data
- Create main orchestrator for data collection
- Update requirements and environment variables
- Add comprehensive documentation

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,18 @@ OPENWEATHERMAP_API_KEY=
 
 # e-Stat API Key (optional for statistical data)
 E_STAT_API_KEY=
+ESTAT_APP_ID=your_estat_app_id_here
+
+# ODPT (公共交通オープンデータセンター) 
+ODPT_ACCESS_TOKEN=your_odpt_token_here
+
+# Twitter/X API (Basic Plan)
+TWITTER_BEARER_TOKEN=your_twitter_bearer_token_here
+TWITTER_API_KEY=your_twitter_api_key_here
+TWITTER_API_SECRET=your_twitter_api_secret_here
+
+# WAQI (大気質データ)
+WAQI_API_KEY=your_waqi_api_key_here
 
 # Secret Key for backend
 SECRET_KEY=dev_secret_key
